--- a/example/extract/extract_html.ipynb
+++ b/example/extract/extract_html.ipynb
@@ -42,7 +42,13 @@
      "text": [
       "Looking in indexes: https://pypi.org/simple, https://pip.repos.neuron.amazonaws.com\n",
       "Requirement already satisfied: bs4 in /home/ubuntu/anaconda3/envs/uniflow/lib/python3.10/site-packages (0.0.1)\n",
-      "Requirement already satisfied: beautifulsoup4 in /home/ubuntu/anaconda3/envs/uniflow/lib/python3.10/site-packages (from bs4) (4.12.2)\n",
+      "Requirement already satisfied: beautifulsoup4 in /home/ubuntu/anaconda3/envs/uniflow/lib/python3.10/site-packages (from bs4) (4.12.2)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Requirement already satisfied: soupsieve>1.2 in /home/ubuntu/anaconda3/envs/uniflow/lib/python3.10/site-packages (from beautifulsoup4->bs4) (2.5)\n"
      ]
     }
@@ -53,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -72,8 +78,7 @@
        "  'ExtractIpynbFlow',\n",
        "  'ExtractMarkdownFlow',\n",
        "  'ExtractPDFFlow',\n",
-       "  'ExtractTxtFlow',\n",
-       "  'ExtractS3TxtFlow'],\n",
+       "  'ExtractTxtFlow'],\n",
        " 'transform': ['TransformAzureOpenAIFlow',\n",
        "  'TransformCopyFlow',\n",
        "  'TransformHuggingFaceFlow',\n",
@@ -82,7 +87,7 @@
        " 'rater': ['RaterFlow']}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +160,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00,  1.72it/s]\n"
+      "100%|██████████| 1/1 [00:00<00:00,  1.86it/s]\n"
      ]
     }
    ],
@@ -174,35 +179,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'chunk_0: Quick search'\n",
-      "'chunk_1: Show Source'\n",
-      "'chunk_2: Table Of Contents'\n",
-      "'chunk_3: 1. Introduction\\n2. Preliminaries\\n2.1. Data Manipulation\\n2.2....'\n",
-      "'chunk_4: Table Of Contents'\n",
-      "'chunk_5: 1. Introduction\\n2. Preliminaries\\n2.1. Data Manipulation\\n2.2....'\n",
-      "'chunk_6: Open the notebook in Colab'\n",
-      "'chunk_7: Open the notebook in Colab'\n",
-      "'chunk_8: Open the notebook in Colab'\n",
-      "'chunk_9: Open the notebook in Colab'\n",
-      "'chunk_10: Open the notebook in SageMaker Studio Lab'\n",
-      "'chunk_11: The universe is overflowing with information. Information pr...'\n",
-      "'chunk_12: Section 4.1'\n",
-      "'chunk_13: Section 4.1'\n",
-      "'chunk_14: Consider the following thought experiment. We have a friend ...'\n"
+      "'chunk_0: 22. Appendix: Mathematics for Deep Learning'\n",
+      "'chunk_1: 22.11. Information Theory'\n",
+      "'chunk_2: Quick search'\n",
+      "'chunk_3: Show Source'\n",
+      "'chunk_4: Preview Version'\n",
+      "'chunk_5: Table Of Contents'\n",
+      "('chunk_6: 1. Introduction\\n'\n",
+      " '2. Preliminaries\\n'\n",
+      " '2.1. Data Manipulation\\n'\n",
+      " '2.2. Data Preprocessing\\n'\n",
+      " '2.3. Linear Algebra\\n'\n",
+      " '2.4. Calculus\\n'\n",
+      " '2.5. Automatic Differentiation\\n'\n",
+      " '2.6. Probability and Statistics\\n'\n",
+      " '2.7. Documentation\\n'\n",
+      " '3. L...')\n",
+      "'chunk_7: Table Of Contents'\n",
+      "('chunk_8: 1. Introduction\\n'\n",
+      " '2. Preliminaries\\n'\n",
+      " '2.1. Data Manipulation\\n'\n",
+      " '2.2. Data Preprocessing\\n'\n",
+      " '2.3. Linear Algebra\\n'\n",
+      " '2.4. Calculus\\n'\n",
+      " '2.5. Automatic Differentiation\\n'\n",
+      " '2.6. Probability and Statistics\\n'\n",
+      " '2.7. Documentation\\n'\n",
+      " '3. L...')\n",
+      "('chunk_9: 22.11. Information Theory ¶ Colab [pytorch] Open the notebook in '\n",
+      " 'Colab Colab [mxnet] Open the notebook in Colab Colab [jax] Open the notebook '\n",
+      " 'in Colab Colab [tensorflow] Open the notebook in Colab Sag...')\n"
      ]
     }
    ],
    "source": [
     "text = output[0]['output'][0]['text']\n",
-    "for i, _s in enumerate(text[0:15]):\n",
-    "    _s = len(_s) > 100 and ((_s[:60]) + \"...\") or _s\n",
+    "for i, _s in enumerate(text[0:10]):\n",
+    "    _s = len(_s) > 100 and ((_s[:200]) + \"...\") or _s\n",
     "    pprint.pprint(f\"chunk_{i}: {_s}\")"
    ]
   },
@@ -225,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
