update files according to comments

--- a/example/transform/openai_pdf_source_10k_QA.ipynb
+++ b/example/transform/openai_pdf_source_10k_QA.ipynb
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!{sys.executable} -m pip install -q langchain pandas pypdf nougat-ocr"
+    "!{sys.executable} -m pip install -q pandas pypdf nougat-ocr"
    ]
   },
   {
@@ -103,7 +103,6 @@
     "from uniflow.flow.config import TransformOpenAIConfig\n",
     "from uniflow.flow.config import ExtractPDFConfig, NougatModelConfig\n",
     "from uniflow.op.model.model_config import OpenAIModelConfig\n",
-    "from langchain.document_loaders import PyPDFLoader\n",
     "from uniflow.op.prompt import Context, PromptTemplate\n",
     "\n",
     "load_dotenv()\n"
@@ -115,7 +114,7 @@
    "metadata": {},
    "source": [
     "### Prepare the input data\n",
-    "First, we need to pre-process the PDF to get text chunks that we can feed into the model. We will use `PyPDFLoader` from langchain."
+    "First, we need to pre-process the PDF to get text chunks that we can feed into the model. We will use `Nougat` to process the PDF data."
    ]
   },
   {
