--- a/example/transform/openai_pdf_source_10k_summary.ipynb
+++ b/example/transform/openai_pdf_source_10k_summary.ipynb
@@ -67,7 +67,7 @@
     }
    ],
    "source": [
-    "!{sys.executable} -m pip install -q langchain pandas pypdf poetry\n",
+    "!{sys.executable} -m pip install -q pandas pypdf poetry nougat-ocr\n",
     "!poetry -C ../../ install --no-root # install uniflow dependencies"
    ]
   },
@@ -112,7 +112,6 @@
     "from uniflow.flow.config import TransformOpenAIConfig\n",
     "from uniflow.flow.config import ExtractPDFConfig, NougatModelConfig\n",
     "from uniflow.op.model.model_config import OpenAIModelConfig\n",
-    "from langchain.document_loaders import PyPDFLoader\n",
     "from uniflow.op.prompt import Context, PromptTemplate\n",
     "\n",
     "load_dotenv()\n"
@@ -124,7 +123,7 @@
    "metadata": {},
    "source": [
     "### Prepare the input data\n",
-    "First, we need to pre-process the PDF to get text chunks that we can feed into the model. We will use `PyPDFLoader` from langchain."
+    "First, we need to pre-process the PDF to get text chunks that we can feed into the model. We will use `Nougat` to process the PDF data."
    ]
   },
   {
