--- a/example/transform/self_instruct_pdf_source.ipynb
+++ b/example/transform/self_instruct_pdf_source.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "You will need to have the following packages installed:\n",
     "```\n",
-    "pip install langchain pandas pypdf\n",
+    "pip install nougat-ocr pandas pypdf\n",
     "```\n",
     "\n",
     "Also, make sure you have a .env file with your OpenAI API key in the root directory of this project.\n",
@@ -81,7 +81,6 @@
     "from uniflow.flow.config import ExtractPDFConfig, NougatModelConfig\n",
     "from uniflow.flow.config import TransformOpenAIConfig\n",
     "from uniflow.op.model.model_config import OpenAIModelConfig\n",
-    "from langchain.document_loaders import PyPDFLoader\n",
     "from uniflow.op.prompt import Context, PromptTemplate\n",
     "from dotenv import load_dotenv\n",
     "\n",
@@ -130,7 +129,7 @@
    "id": "90151cb3-2071-4a32-8b1d-30d5ecd0d5f8",
    "metadata": {},
    "source": [
-    "Load and split the pdf"
+    "### Load and split the pdf"
    ]
   },
   {
