Update pipeline notebook after pipeline class refactor.

--- a/example/pipeline/pipeline_pdf.ipynb
+++ b/example/pipeline/pipeline_pdf.ipynb
@@ -329,7 +329,7 @@
     "questions = []\n",
     "answers = []\n",
     "\n",
-    "for item in output[0]:\n",
+    "for item in output:\n",
     "    for i in item.get('output', []):\n",
     "        for response in i.get('response', []):\n",
     "            if any(key not in response for key in ['context', 'question', 'answer']):\n",
