--- a/example/pipeline/pipeline_pdf_extract_transform.ipynb
+++ b/example/pipeline/pipeline_pdf_extract_transform.ipynb
@@ -350,7 +350,7 @@
     "keywords = [\"context:\", \"question:\", \"answer:\"]\n",
     "pattern = '|'.join(map(re.escape, keywords))\n",
     "\n",
-    "for item in output[0][3:5]:\n",
+    "for item in output[3:5]:\n",
     "    o = item['output'][0]['response'][0]\n",
     "    segments = [segment for segment in re.split(pattern, o) if segment.strip()]\n",
     "\n",
