--- a/example/transform/openai_long_text.ipynb
+++ b/example/transform/openai_long_text.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -77,25 +77,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "8d84dd70",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/chenzhihan/Library/Python/3.9/lib/python/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,6 +125,12 @@
     "            context=\"In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\",\n",
     "            question=\"Who published A Mathematical Theory of Communication in 1948?\",\n",
     "            answer=\"Claude E. Shannon.\",\n",
+    "        ),\n",
+    "        Context(\n",
+    "            context=\"\"\"The Compute & Networking segment is comprised of our Data Center accelerated computing platforms and end-to-end networking platforms including Quantum\n",
+    "for InfiniBand and Spectrum for Ethernet; our NVIDIA DRIVE automated-driving platform and automotive development agreements; \"\"\",\n",
+    "            question=\"What does the Compute & Networking segment include?\",\n",
+    "            answer=\"\"\"The Compute & Networking segment includes Data Center accelerated computing platforms, end-to-end networking platforms (Quantum for InfiniBand and Spectrum for Ethernet), the NVIDIA DRIVE automated-driving platform, and automotive development agreements.\"\"\",\n",
     "        ),\n",
     "])"
    ]
@@ -159,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "a95e6486",
    "metadata": {},
    "outputs": [
@@ -227,14 +225,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:11<00:00,  1.30it/s]\n"
+      "  0%|          | 0/15 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 15/15 [00:12<00:00,  1.24it/s]\n"
      ]
     }
    ],
@@ -248,6 +253,69 @@
    "metadata": {},
    "source": [
     "### Output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "74ccffb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "['question: Who is the young Princess Bolkonskaya married to?\\n'\n",
+      " 'answer: The young Princess Bolkonskaya is married to Prince Bolkonski, and '\n",
+      " 'she is known as the most fascinating woman in Petersburg.']\n",
+      "['question: Who entered the drawing room as another visitor?\\n'\n",
+      " \"answer: Prince Andrew Bolkonski, the little princess' husband.\"]\n",
+      "['question: Who was speaking French and stressing the last syllable of the '\n",
+      " \"general's name like a Frenchman?\\n\"\n",
+      " 'answer: Bolkonski.']\n",
+      "[\"question: Who was the lady's gown for a house dress as fresh and elegant as \"\n",
+      " 'the other?\\n'\n",
+      " 'answer: The princess.']\n",
+      "['question: Who was betting with Stevens, an English naval officer, that he '\n",
+      " 'would drink a bottle of rum sitting on the outer ledge of the third floor '\n",
+      " 'window with his legs hanging out?\\n'\n",
+      " 'answer: Dolokhov was betting with Stevens.']\n",
+      "['question: Who are the three men known for their misadventures with a bear?\\n'\n",
+      " \"answer: Anatole Kuragin, Prince Vasili's son, and a certain Dolokhov.\"]\n",
+      "['question: Who is Sonya in the context?\\n'\n",
+      " \"answer: Sonya is a slender little brunette who is the count's \"\n",
+      " 'fifteen-year-old niece.']\n",
+      "['question: Who is the Countess inviting to dinner?\\n'\n",
+      " 'answer: The Countess is inviting Pierre to dinner.']\n",
+      "[\"question: Who is Boris's mother?\\n\"\n",
+      " 'answer: Princess Anna Mikhaylovna Drubetskaya.']\n",
+      "['question: Who wrote A Mathematical Theory of Communication in 1948?\\n'\n",
+      " 'answer: Claude E. Shannon.']\n",
+      "['question: What were the guests doing before the ices and champagne were '\n",
+      " 'served?\\n'\n",
+      " 'answer: The guests were seated at the table and engaging in lively '\n",
+      " 'conversation.']\n",
+      "['question: What did the old priest say about the limits of human life?\\n'\n",
+      " 'answer: The old priest said, \"The limits of human life... are fixed and may '\n",
+      " 'not be o\\'erpassed.\"']\n",
+      "['question: Who accompanied Pierre in the carriage as it drove into the court '\n",
+      " \"of Count Bezukhov's house?\\n\"\n",
+      " 'answer: Anna Mikhaylovna.']\n",
+      "['question: Who was the dying man that everyone was attending to in the large '\n",
+      " 'room?\\n'\n",
+      " 'answer: The dying man was Count Bezukhov, the father of Pierre.']\n",
+      "['question: Who was speaking in excited whispers to Anna Mikhaylovna?\\n'\n",
+      " 'answer: The younger of the two speakers was speaking in excited whispers to '\n",
+      " 'Anna Mikhaylovna.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pprint import pprint\n",
+    "pprint(len(output))\n",
+    "for o in output:\n",
+    "    pprint(o['output'][0]['response'])"
    ]
   },
   {
