--- a/example/transform/openai_long_text.ipynb
+++ b/example/transform/openai_long_text.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 67,
    "id": "8d84dd70",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
    "source": [
     "from dotenv import load_dotenv\n",
     "from uniflow.flow.client import TransformClient\n",
-    "from uniflow.flow.config import TransformOpenAIConfig\n",
+    "from uniflow.flow.config import TransformOpenAIConfig, TransformForGenerationOpenAIGPT3p5Config\n",
     "from uniflow.op.model.model_config import OpenAIModelConfig\n",
     "from uniflow.op.prompt import Context, PromptTemplate\n",
     "\n",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,20 +157,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = TransformOpenAIConfig(\n",
+    "# config = TransformOpenAIConfig(\n",
+    "#     prompt_template=guided_prompt,\n",
+    "#     model_config=OpenAIModelConfig(response_format={\"type\": \"text\"}),\n",
+    "#     # auto_split_long_text=False\n",
+    "# )\n",
+    "\n",
+    "config2 = TransformForGenerationOpenAIGPT3p5Config(\n",
     "    prompt_template=guided_prompt,\n",
-    "    model_config=OpenAIModelConfig(response_format={\"type\": \"text\"}),\n",
+    "    model_config=OpenAIModelConfig(),\n",
+    "    auto_split_long_text=False\n",
     ")\n",
-    "client = TransformClient(config)"
+    "\n",
+    "client = TransformClient(config2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 70,
    "id": "a95e6486",
    "metadata": {},
    "outputs": [
@@ -225,25 +233,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/15 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 15/15 [00:12<00:00,  1.24it/s]\n"
+      "100%|██████████| 1/1 [00:01<00:00,  1.14s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.37s/it]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  1.13it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  1.38it/s]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.11s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.01s/it]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  1.60it/s]\n",
+      "100%|██████████| 1/1 [00:04<00:00,  4.81s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.88s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.15s/it]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  1.01it/s]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.10s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.35s/it]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  1.25it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  1.39it/s]\n"
      ]
     }
    ],
    "source": [
+    "# print(contexts[0])\n",
+    "\n",
     "output = client.run(contexts[:15])"
    ]
   },
@@ -257,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 72,
    "id": "74ccffb8",
    "metadata": {},
    "outputs": [
@@ -266,54 +283,76 @@
      "output_type": "stream",
      "text": [
       "15\n",
-      "['question: Who is the young Princess Bolkonskaya married to?\\n'\n",
-      " 'answer: The young Princess Bolkonskaya is married to Prince Bolkonski, and '\n",
-      " 'she is known as the most fascinating woman in Petersburg.']\n",
-      "['question: Who entered the drawing room as another visitor?\\n'\n",
-      " \"answer: Prince Andrew Bolkonski, the little princess' husband.\"]\n",
-      "['question: Who was speaking French and stressing the last syllable of the '\n",
-      " \"general's name like a Frenchman?\\n\"\n",
-      " 'answer: Bolkonski.']\n",
-      "[\"question: Who was the lady's gown for a house dress as fresh and elegant as \"\n",
-      " 'the other?\\n'\n",
-      " 'answer: The princess.']\n",
-      "['question: Who was betting with Stevens, an English naval officer, that he '\n",
-      " 'would drink a bottle of rum sitting on the outer ledge of the third floor '\n",
-      " 'window with his legs hanging out?\\n'\n",
-      " 'answer: Dolokhov was betting with Stevens.']\n",
-      "['question: Who are the three men known for their misadventures with a bear?\\n'\n",
-      " \"answer: Anatole Kuragin, Prince Vasili's son, and a certain Dolokhov.\"]\n",
-      "['question: Who is Sonya in the context?\\n'\n",
-      " \"answer: Sonya is a slender little brunette who is the count's \"\n",
-      " 'fifteen-year-old niece.']\n",
-      "['question: Who is the Countess inviting to dinner?\\n'\n",
-      " 'answer: The Countess is inviting Pierre to dinner.']\n",
-      "[\"question: Who is Boris's mother?\\n\"\n",
-      " 'answer: Princess Anna Mikhaylovna Drubetskaya.']\n",
-      "['question: Who wrote A Mathematical Theory of Communication in 1948?\\n'\n",
-      " 'answer: Claude E. Shannon.']\n",
-      "['question: What were the guests doing before the ices and champagne were '\n",
-      " 'served?\\n'\n",
-      " 'answer: The guests were seated at the table and engaging in lively '\n",
-      " 'conversation.']\n",
-      "['question: What did the old priest say about the limits of human life?\\n'\n",
-      " 'answer: The old priest said, \"The limits of human life... are fixed and may '\n",
-      " 'not be o\\'erpassed.\"']\n",
-      "['question: Who accompanied Pierre in the carriage as it drove into the court '\n",
-      " \"of Count Bezukhov's house?\\n\"\n",
-      " 'answer: Anna Mikhaylovna.']\n",
-      "['question: Who was the dying man that everyone was attending to in the large '\n",
-      " 'room?\\n'\n",
-      " 'answer: The dying man was Count Bezukhov, the father of Pierre.']\n",
-      "['question: Who was speaking in excited whispers to Anna Mikhaylovna?\\n'\n",
-      " 'answer: The younger of the two speakers was speaking in excited whispers to '\n",
-      " 'Anna Mikhaylovna.']\n"
+      "{'output': [{'error': 'No errors.',\n",
+      "             'response': ['question: Who was the speaker in the dialogue '\n",
+      "                          'mentioned in the context?\\n'\n",
+      "                          'answer: Anna Pavlovna Scherer was the speaker in '\n",
+      "                          'the dialogue mentioned in the context.']}],\n",
+      " 'root': <uniflow.node.Node object at 0x1221dc100>}\n",
+      "['question: Who was the speaker in the dialogue mentioned in the context?\\n'\n",
+      " 'answer: Anna Pavlovna Scherer was the speaker in the dialogue mentioned in '\n",
+      " 'the context.']\n",
+      "['question: Who graced the drawing room with her presence in the context '\n",
+      " 'mentioned?\\n'\n",
+      " 'answer: The little princess.']\n",
+      "['question: What is the topic of conversation at the beginning of the '\n",
+      " 'document?\\n'\n",
+      " 'answer: The conversation involves debates about Napoleon, the Revolution, '\n",
+      " 'the rights of man, and the ideals of liberty and equality.']\n",
+      "['question: Who is the article \"A Mathematical Theory of Communication\" by?\\n'\n",
+      " 'answer: The article \"A Mathematical Theory of Communication\" was published '\n",
+      " 'by Claude E. Shannon.']\n",
+      "['question: What are the main topics of discussion in the last context?\\n'\n",
+      " 'answer: The main topics of discussion are Pierre and Anatole being at '\n",
+      " \"Kuragin's place where drinking and gambling take place. Anatole and Dolokhov \"\n",
+      " 'are the prominent characters here. At this gathering, Pierre is seen '\n",
+      " 'drinking and observing all the activities happening.']\n",
+      "['question: Who is the son of Marya Ivanovna Dolokhova, a worthy woman?\\n'\n",
+      " 'answer: Dolokhov.']\n",
+      "['question: Who is in love with Boris?\\nanswer: Sonya is in love with Boris.']\n",
+      "['question: Who is the count referring to when he mentions inviting someone to '\n",
+      " 'dinner, and who is he hoping is feeling better?\\n'\n",
+      " 'answer: The count is referring to inviting Pierre to dinner, and he is '\n",
+      " 'hoping that Count Cyril Vladimirovich is feeling better.']\n",
+      "['question: What is the content of the context provided?\\n'\n",
+      " 'answer: The context is about a scene from a book where characters are '\n",
+      " 'entering a house, and Mother is asking Boris to be respectful to Count Cyril '\n",
+      " 'Vladimirovich. Prince Vasili comes in and his arrival makes Boris and Anna '\n",
+      " 'Mikhaylovna uneasy. Prince Vasili and Anna Mikhaylovna converse about the '\n",
+      " \"prince's health and the future of Boris. Later, Pierre visits the house and \"\n",
+      " \"is met with a cold reception from the count's family. Boris arrives and \"\n",
+      " 'tries to introduce himself to Pierre, who clearly has no recollection of '\n",
+      " 'Boris.']\n",
+      "[\"question: What does the Count's room, full of tobacco smoke, turn to for \"\n",
+      " 'discussion?\\n'\n",
+      " \"answer: The conversation in the Count's room, full of tobacco smoke, turns \"\n",
+      " 'to war and the recruiting process.']\n",
+      "['question: What is the topic of conversation at the table?\\n'\n",
+      " 'answer: The conversation at the table revolves around the impending war and '\n",
+      " 'the declaration of war against Bonaparte. Additionally, there is '\n",
+      " 'light-hearted banter about the sweets and ice pudding being served.']\n",
+      "['question: What was the name of the dance that the count performed at the '\n",
+      " 'ball?\\n'\n",
+      " \"answer: The count's favorite dance was the Daniel Cooper, which he had \"\n",
+      " 'danced in his youth.']\n",
+      "['question: Who are the two men who look like tradespeople and what do they do '\n",
+      " 'while Pierre is getting down from the carriage steps?\\n'\n",
+      " 'answer: Two men who look like tradespeople ran hurriedly from the entrance '\n",
+      " 'and hid in the shadow of the wall while Pierre was getting down from the '\n",
+      " 'carriage steps.']\n",
+      "['question: Who is the dying man that Anna Mikhaylovna and Pierre are with?\\n'\n",
+      " \"answer: The dying man was Pierre's father, Count Bezukhov.\"]\n",
+      "['question: Who were the people gathered around the sick man in the room?\\n'\n",
+      " 'answer: The sick man was surrounded by doctors, princesses, and servants.']\n"
      ]
     }
    ],
    "source": [
     "from pprint import pprint\n",
     "pprint(len(output))\n",
+    "\n",
+    "pprint(output[0])\n",
+    "\n",
     "for o in output:\n",
     "    pprint(o['output'][0]['response'])"
    ]
