--- a/example/transform/openai_long_text_splitter.ipynb
+++ b/example/transform/openai_long_text_splitter.ipynb
@@ -108,7 +108,7 @@
     "from uniflow.op.model.model_config import OpenAIModelConfig\n",
     "from uniflow.op.prompt import Context, PromptTemplate\n",
     "\n",
-    "load_dotenv()\n"
+    "load_dotenv()"
    ]
   },
   {
