--- a/example/transform/openai_long_text_splitter.ipynb
+++ b/example/transform/openai_long_text_splitter.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -65,8 +65,32 @@
     }
    ],
    "source": [
-    "!{sys.executable} -m pip install -q python-dotenv openai\n",
+    "!{sys.executable} -m pip install -q python-dotenv openai tiktoken\n",
     "!{sys.executable} -m pip uninstall -y uniflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b12b5bd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Encoding 'cl100k_base'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tiktoken\n",
+    "enc = tiktoken.encoding_for_model(\"gpt-3.5\")\n",
+    "enc = tiktoken.get_encoding(\"cl100k_base\")\n",
+    "print(enc)\n",
+    "assert enc.decode(enc.encode(\"hello world\")) == \"hello world\"\n",
+    "\n",
+    "# To get the tokeniser corresponding to a specific model in the OpenAI API:"
    ]
   },
   {
@@ -243,17 +267,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The current Context object needs splitting because it exceeds the token limitation.\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 11/11 [00:09<00:00,  1.15it/s]\n"
+      "100%|██████████| 11/11 [00:09<00:00,  1.12it/s]\n"
      ]
     }
    ],
@@ -271,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "74ccffb8",
    "metadata": {},
    "outputs": [
@@ -281,100 +298,100 @@
        "\n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> What did Anna Pavlovna talk to Prince Vasili about during their conversation?\n",
+       "            <b>Question:</b> Who is the speaker in the last context?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Anna Pavlovna discussed political matters, the Dowager Empress, and her dissatisfaction with Prince Vasili's younger son with him during their conversation.\n",
+       "            <b>Answer:</b> Anna Pavlovna Scherer is the speaker in the last context.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who was the beautiful Princess Helene?\n",
+       "            <b>Question:</b> Who is the beautiful Princess Helene grouped with at Anna Pavlovna's reception?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> The beautiful Princess Helene was Prince Vasili's daughter.\n",
+       "            <b>Answer:</b> The beautiful Princess Helene is grouped with the little Princess Bolkonskaya and a group of young people.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who is the author of the story that the vicomte is currently telling?\n",
+       "            <b>Question:</b> Who is the author of the story being told?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> The vicomte is the author of the story.\n",
+       "            <b>Answer:</b> The author of the story being told is the vicomte.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who was quoted as saying, \"I showed them the path to glory, but they did not follow it\"?\n",
+       "            <b>Question:</b> Who said, \"I showed them the path to glory, but they did not follow it,\"?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Prince Andrew quoted Napoleon's words.\n",
+       "            <b>Answer:</b> Prince Andrew.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who left the drawing room in an ungainly manner and how did he leave?\n",
+       "            <b>Question:</b> What was the theme of Prince Hippolyte's anecdote?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Pierre left the drawing room ungainly. He did not know how to enter or leave a room, and when he rose to go, he took up instead of his own, the general's three-cornered hat.\n",
+       "            <b>Answer:</b> The anecdote Prince Hippolyte told was about a stingy lady from Moscow who had a lady's maid put on a livery and get up behind her carriage when going out.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who was the famous Russian author of War and Peace and Anna Karenina?\n",
+       "            <b>Question:</b> Who was having a conversation about war and a career choice in the last example?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Leo Tolstoy.\n",
+       "            <b>Answer:</b> Pierre and Prince Andrew were having a conversation about war and a career choice.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> What does Pierre decide to do despite his promise to Prince Andrew?\n",
+       "            <b>Question:</b> Who is the author of the article \"A Mathematical Theory of Communication\"?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Pierre decides to go to Kuragin's gathering.\n",
+       "            <b>Answer:</b> Claude E. Shannon.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who was the officer of the Semenov regiment known for his gambling and dueling?\n",
+       "            <b>Question:</b> Who was living with Anatole?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Dolokhov.\n",
+       "            <b>Answer:</b> Dolokhov, an officer of the Semenov regiment, a notorious gambler and duelist.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who did Princess Anna Mikhaylovna intervene in a conversation about?\n",
+       "            <b>Question:</b> Who was being spoken about as the next heir in the conversation?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Princess Anna Mikhaylovna intervened in a conversation about Count Cyril's reputation and who would inherit his immense fortune, Pierre or Prince Vasili.\n",
+       "            <b>Answer:</b> Prince Vasili.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who are the younger generation that settled down in the drawing room?\n",
+       "            <b>Question:</b> Who were the younger generation that settled down in the drawing room?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> The younger generation consists of Boris, the officer, Anna Mikhaylovna's son; Nicholas, the undergraduate, the count's eldest son; Sonya, the count's fifteen-year-old niece; and little Petya, his youngest boy.\n",
+       "            <b>Answer:</b> The younger generation that settled in the drawing room included Boris, the officer, Anna Mikhaylovna's son; Nicholas, the undergraduate, the count's eldest son; Sonya, the count's fifteen-year-old niece, and little Petya, his youngest boy.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> How many years will the man wait before asking for Natasha's hand in marriage?\n",
+       "            <b>Question:</b> How many years did Natasha count on her fingers before responding to the proposal? \n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> In another four years.\n",
+       "            <b>Answer:</b> Natasha counted four years on her fingers before responding to the proposal.\n",
        "        </div>\n",
        "    </div>\n",
        "    "
